CSS fix: body overflow messed up sticky header.

--- a/assets/css/partials/_setup.scss
+++ b/assets/css/partials/_setup.scss
@@ -9,7 +9,6 @@
 @import '../modules/_typography';
 
 body {
-	overflow-y: hidden;
 	font-family: $sans;
 	line-height: 1.5;
 	background:$body_bg;
